# polars-ecommerce-analysis

./: README.md  main.py  pyproject.toml
data/processed/report_20250117_001750/: customer_metrics.csv  top_products.csv
data/processed/report_20250119_001602/: report.html
data/processed/report_20250119_001602/results/: customer_metrics.csv  top_products.csv
data/processed/report_20250119_001932/: report.qmd  report.quarto_ipynb
data/processed/report_20250119_001932/results/: customer_metrics.csv  temporal_daily.csv  top_products.csv
data/processed/report_20250119_001950/: report.html  report.qmd
data/processed/report_20250119_001950/results/: customer_metrics.csv  top_products.csv
data/processed/report_20250119_002139/: report.qmd  report.quarto_ipynb
data/processed/report_20250119_002139/results/: customer_metrics.csv  top_products.csv
data/processed/report_20250119_002231/: report.qmd  report.quarto_ipynb
data/processed/report_20250119_003031/: report.qmd  report.quarto_ipynb
data/processed/report_20250119_003050/: report.qmd  report.quarto_ipynb
data/processed/report_20250119_003127/: report.qmd  report.quarto_ipynb
data/processed/report_20250119_003317/: report.html  report.qmd
data/processed/report_20250119_004442/: report.html  report.qmd
data/processed/report_20250119_004854/: report.html  report.qmd
data/raw/: .~lock.online_retail.csv#
src/ecommerce_analysis/: __init__.py  cli.py  data_cleaner.py  data_loader.py  kpi_calculator.py  quarto_exporter.py  visualizer.py
templates/quarto/: template.qmd
(+19 files in other folders)
