[project]
name = "polars-ecommerce-analysis"
version = "0.1.0"
description = "Analyse de données e-commerce avec Polars et Plotly"
authors = [{ name = "Gaël Penessot", email = "gael.penessot@data-decision.io" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "duckdb>=1.1.3",
    "jupyter>=1.1.1",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.20.0",
    "pyarrow>=19.0.0",
    "shiny>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Cette section est cruciale pour un projet avec structure src/
[tool.hatch.build.targets.wheel]
packages = ["src/ecommerce_analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
select = ["E", "F", "I", "UP"]
ignore = []
line-length = 88

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
